# versedb

./: .gitignore  LICENSE  Makefile  README.md  RELEASENOTE.md
.github/workflows/: mac.yml  rust.yml
engine/: .gitignore  Cargo.toml  Makefile  build.rs  index.html
engine/examples/: category.rs  csv.rs  hello.rs  json.rs  memory.rs  myclient.rs  myclient2.rs  myserver.rs  rocksdb.rs  sled.rs  sled2.rs  sled3.rs  sled4.rs  sledall.rs  sqlite.rs  yaml.rs
engine/proto/: client.py  server.py  versedb.capnp
engine/src/: client.rs  csv.rs  database.rs  idb.rs  json.rs  lib.rs  memory.rs  rocksdb.rs  server.rs  sled.rs  sqlite.rs  yaml.rs
engine/tests/: csv_test.rs  json_test.rs  memory_test.rs  rocksdb_test.rs  sled_test.rs  sqlite_test.rs  wasm_test.rs  wasm_test2.rs  yaml_test.rs
testweb/: Cargo.toml  Makefile  Trunk.toml
testweb/src/: app.rs  lib.rs  main.rs  versedb.rs
testweb/src-tauri/: Cargo.toml  tauri.conf.json
testweb/src-tauri/src/: main.rs
