[package]
name = "versedb"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
capnp = "0.21"
sled = { version = "0.34.7", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "Window",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbOpenDbRequest",
    "IdbRequest",
    "Event",
    "EventTarget",
    "DomException",
    "IdbFactory",
    "DomStringList",
    "IdbObjectStoreParameters",
    "IdbKeyRange",
    "IdbCursor",
    "IdbCursorWithValue",
    "IdbIndex",
], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
async-trait = "0.1"
chrono = "0.4"
serde_json = "1.0.140"
anyhow = "1.0.98"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.14", features = ["js"] }
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }

[features]
default = ["native"]
native = ["sled"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "wasm-bindgen-futures"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
tempfile = "3.10"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.36", features = ["full"] }


[build-dependencies]
capnpc = "0.21"
