[package]
name = "versedb"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
capnp = "0.21"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
anyhow = "1.0.98"
futures-util = "0.3"
futures = "0.3"
hex = "0.4.3"
yaml-rust2 = "0.10.1"
bincode = "2.0.1"
clap = { version = "4.5.37", features = ["derive"] }
flexbuffers = { version = "25.2", features = ["serialize_human_readable", "deserialize_human_readable"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.14", features = ["js"] }
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbOpenDbRequest",
    "IdbRequest",
    "Event",
    "EventTarget",
    "DomException",
    "IdbFactory",
    "DomStringList",
    "IdbObjectStoreParameters",
    "IdbKeyRange",
    "IdbCursor",
    "IdbCursorWithValue",
    "IdbIndex",
] }
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.1"
fake = "4.3.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
capnp-rpc = "0.21"
tokio = { version = "1.36", features = ["full"] }
rocksdb = "0.23.0"
tokio-util = { version = "0.7", features = ["compat"] }
sled = "0.34.7"

[dev-dependencies]
wasm-bindgen-test = "0.3"
tempfile = "3.10"

[build-dependencies]
capnpc = "0.21"

[[bin]]
name = "versedbclient"
path = "src/bin/versedbclient.rs"

[[bin]]
name = "versedbserver"
path = "src/bin/versedbserver.rs"
