[package]
name = "testweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
send_wrapper = { version = "0.6.0", features = ["futures"] }
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
leptos_router_macro = { version = "0.7" }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Storage",
    "Performance",
    "Window",
    "Geolocation",
    "PositionOptions",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlImageElement",
    "Navigator",
    "Clipboard",
    "FileList",
    "File",
    "FileReader",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbRequest",
    "IdbCursor",
    "IdbKeyRange"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
console_log = "1"
gloo-net = "0.6"
gloo-timers = { version = "0.3.0", features = ["futures"] }
uuid = { version = "1.16", features = ["v4", "js"] }
chrono = "0.4"
anyhow = "1.0"
capnp = "0.21"
base64 = "0.22"
hex = "0.4.3"
reqwest = "0.12"
once_cell = "1.19"
futures = "0.3.31"
getrandom = { version = "0.2", features = ["js"] }
idb = "0.6.4"
versedb = { path = "../engine", features = ["wasm"] }
lazy_static = "1.4"

[workspace]
members = ["src-tauri"]
